--- a/template/add.html
+++ b/template/add.html
@@ -23,7 +23,7 @@
                 <label>Price</label>
                 <input type="number" class="form-control" name="price" step="0.1" min="1000" max="1000000"
                        placeholder="Enter price.">
-                <small class="form-text text-muted">Input price</small>
+                <small class="form-text text-muted">Input price in euro.</small>
             </div>  
             
             <div class="form-group">
