--- a/template/add.html
+++ b/template/add.html
@@ -7,8 +7,9 @@
     <title>Add a car</title>
 </head>
 <body>
+    <br>
     <div class="form-horizontal container col-4">
-        <form action="/car/add" method="post">
+        <form action="/car" method="post" enctype="application/x-www-form-urlencoded">
             <div class="form-group">
                 <label>Model</label>
                 <input type="text" class="form-control" name="model" placeholder="Enter model.">
