--- a/template/add.html
+++ b/template/add.html
@@ -11,6 +11,11 @@
     <div class="form-horizontal container col-4">
         <form action="/car" method="post" enctype="application/x-www-form-urlencoded">
             <div class="form-group">
+                <label>Brand</label>
+                <input type="text" class="form-control" name="brand" placeholder="Enter brand.">
+                <small class="form-text text-muted">Input brand</small>
+            </div>
+            <div class="form-group">
                 <label>Model</label>
                 <input type="text" class="form-control" name="model" placeholder="Enter model.">
                 <small class="form-text text-muted">Input model</small>
@@ -24,7 +29,7 @@
                 <label>Price</label>
                 <input type="number" class="form-control" name="price" step="0.1" min="1000" max="1000000"
                        placeholder="Enter price.">
-                <small class="form-text text-muted">Input price in euro.</small>
+                <small class="form-text text-muted">Input price in $.</small>
             </div>  
             
             <div class="form-group">
